--- a/Views/Pizza/Update.cshtml
+++ b/Views/Pizza/Update.cshtml
@@ -3,30 +3,31 @@
 @{
 }
 
-<div class="container py-3">
-    <form class="row g-3" method="POST" asp-action="Update" asp-route-id="@Model.Id">
+<div >
+    <form method="POST" asp-action="Update" asp-route-id="@Model.Id">
+        @Html.AntiForgeryToken()
         <div class="col-md-6">
             <label asp-for="Name" class="form-label">Name</label>
             <input asp-for="Name" type="text" class="form-control">
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <span asp-validation-for="Name"></span>
         </div>
-        <div class="col-md-6">
+        <div>
             <label asp-for="Price" class="form-label">Price</label>
             <input asp-for="Price" type="number" class="form-control" step=".01" value="0" min="0" max="100">
-            <span asp-validation-for="Price" class="text-danger"></span>
+            <span asp-validation-for="Price"></span>
         </div>
-        <div class="col-md-6">
+        <div>
             <label asp-for="Photo" class="form-label">Photo</label>
             <input asp-for="Photo" type="text" class="form-control">
-            <span asp-validation-for="Photo" class="text-danger"></span>
+            <span asp-validation-for="Photo"></span>
         </div>
-        <div class="col-md-6">
+        <div>
             <label asp-for="Description" class="form-label">Description</label>
             <textarea asp-for="Description" class="form-control" rows="3"></textarea>
-            <span asp-validation-for="Description" class="text-danger"></span>
+            <span asp-validation-for="Description"></span>
         </div>
         <div class="col-12">
-            <button class="btn btn-primary" type="submit">Edit</button>
+            <button type="submit">Edit</button>
         </div>
     </form>
 </div>
