--- a/Views/Pizza/Create.cshtml
+++ b/Views/Pizza/Create.cshtml
@@ -1,32 +1,82 @@
-﻿@model Pizza
+﻿@*@model PizzasCategories
+    <div>
+        <form method="post" asp-action="Create">
+            @Html.AntiForgeryToken()
+            <div class="mb-3">
+                <label asp-for="Pizza.Name" for="name" class="form-label">Nome</label>
+                <input asp-for="Pizza.Name" type="text" class="form-control" id="name">
+                <span  asp-validation-for="Pizza.Name"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Pizza.Description" for="description" >Descrizione</label>
+                <textarea asp-for="Pizza.Description" class="form-control" id="description"></textarea>
+                <span class="text-danger" asp-validation-for="Pizza.Description"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Pizza.Photo" for="image" >Immagine</label>
+                <input asp-for="Pizza.Photo" type="file"  id="image">
+                <span asp-validation-for="Pizza.Photo"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Pizza.Price" for="price">Prezzo</label>
+                <input asp-for="Pizza.Price" type="number" id="price" step=".1">
+                <span  asp-validation-for="Pizza.Price"></span>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
+    </div>*@
+@model PizzasCategories
 
-@{
-}
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="d-flex align-items-center">
+                <h1 class="mt-3 mb-3">Nuova pizza</h1>
+            </div>
+            <form asp-controller="Pizza" asp-action="Create" method="post">
+                @Html.AntiForgeryToken()
+                <div class="mb-3">
+                    <strong>Immagine:</strong>
+                    <input asp-for="Pizza.Photo" class="d-block w-100" />
+                    <span asp-validation-for="Pizza.Photo" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <strong>Titolo:</strong>
+                    <input asp-for="Pizza.Name" class="d-block w-100" />
+                    <span asp-validation-for="Pizza.Name" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <strong>Contenuto:</strong>
+                    <textarea asp-for="Pizza.Description" rows="10" class="d-block w-100"></textarea>
+                    <span asp-validation-for="Pizza.Description" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <strong>Categoria:</strong>
+                    <select asp-for="Pizza.CategoryId" rows="10" class="d-block w-100">
 
-<div>
-    <form method="post" asp-action="Create">
-        @Html.AntiForgeryToken()
-        <div class="mb-3">
-            <label asp-for="Name" for="name" class="form-label">Nome</label>
-            <input asp-for="Name" type="text" class="form-control" id="name">
-            <span  asp-validation-for="Name"></span>
+                        @foreach (Category category in Model.Categories)
+                        {
+                            @if (Model.Pizza.CategoryId == category.Id)
+                            {
+                                <option value="@category.Id" selected>@category.Title</option>
+                            }
+                            else
+                            {
+                                <option value="@category.Id">@category.Title</option>
+                            }
+                        }
+                    </select>
+                    <span asp-validation-for="Pizza.CategoryId" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <label asp-for="Pizza.Price" for="price">Prezzo</label>
+                    <input asp-for="Pizza.Price" type="number" id="price" step=".1">
+                    <span asp-validation-for="Pizza.Price"></span>
+                </div>
+                <button type="submit">Submit</button>
+
+            </form>
         </div>
-        <div class="mb-3">
-            <label asp-for="Description" for="description" >Descrizione</label>
-            <textarea asp-for="Description" class="form-control" id="description"></textarea>
-            <span class="text-danger" asp-validation-for="Description"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="Photo" for="image" >Immagine</label>
-            <input asp-for="Photo" type="file"  id="image">
-            <span asp-validation-for="Photo"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="Price" for="price">Prezzo</label>
-            <input asp-for="Price" type="number" id="price" step=".1">
-            <span  asp-validation-for="Price"></span>
-        </div>
-        <button type="submit">Submit</button>
-    </form>
+    </div>
 </div>
 
