--- a/Views/Pizza/Index.cshtml
+++ b/Views/Pizza/Index.cshtml
@@ -1,38 +1,106 @@
-﻿@model List<Pizza>
+﻿@*@model List<Pizza>
 
-<body style="margin:0;" padding="0;" box-sizin="border-box;">
-    <section >
-        <div class="container">
-            <div>
-                @if (Model.Count > 0)
-                {
-                    @foreach (Pizza pizza in Model)
+    <body style="margin:0;" padding="0;" box-sizin="border-box;">
+        <section >
+            <div class="container">
+                <div>
+                    @if (Model.Count > 0)
                     {
-                        <div>
+                        @foreach (Pizza pizza in Model)
+                        {
                             <div>
+                                <div>
 
-                                <img style="width:50px;" src="@pizza.Photo" alt="@pizza.Name" />
-                                <a href="@Url.Action("Show","Pizza", new{ Id = pizza.Id})">
-                                    <h3>@pizza.Name</h3>
-                                </a>
-                                <span>Price : @pizza.Price $</span>
-                                <p> Description: <small>@pizza.Description</small></p>
-                                <a href="@Url.Action("Update","Pizza", new{ id = pizza.Id})"> Modifica</a>
-                                <form method="POST" asp-action="Delete" asp-route-id="@pizza.Id">
-                                    <button  type="submit">Delete</button>
-                                </form>
+                                    <img style="width:50px;" src="@pizza.Photo" alt="@pizza.Name" />
+                                    <a href="@Url.Action("Details","Pizza", new{ Id = pizza.Id})">
+                                        <h3>@pizza.Name</h3>
+                                    </a>
+                                    <span>Price : @pizza.Price $</span>
+                                    <p> Description: <small>@pizza.Description</small></p>
+                                    <a href="@Url.Action("Update","Pizza", new{ id = pizza.Id})"> Modifica</a>
+                                    <form method="POST" asp-action="Delete" asp-route-id="@pizza.Id">
+                                        <button  type="submit">Delete</button>
+                                    </form>
+
+                                </div>
                             </div>
-                        </div>
-                    }
-                    <button> <a asp-area="" asp-controller="Pizza" asp-action="Create">+</a></button>
-                    
-                }
+                        }
+                        <button> <a asp-area="" asp-controller="Pizza" asp-action="Create">+</a></button>
 
-                else
-                {
-                    <h2>The menu is empty</h2>
-                }
+                    }
+
+                    else
+                    {
+                        <h2>The menu is empty</h2>
+                    }
+                </div>
             </div>
+        </section>
+    </body>*@
+@model List<Pizza>
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="d-flex justify-content-between align-items-center">
+                <h1 class="mt-3 mb-3">Lista posts</h1>
+                <a class="btn btn-primary" asp-controller="Pizza" asp-action="Create">
+                    Nuova Pizza
+                </a>
+            </div>
+
+            @if (Model.Count() == 0)
+            {
+                <h3 class="text-center">Non hai inserito alcuna pizza</h3>
+            }
+            else
+            {
+                <table class="table post-list-table">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Immagine</th>
+                            <th>Titolo</th>
+                            <th>Descrizione</th>
+                            <th>Prezzo</th>
+                            @*<th>Categoria</th>*@
+                            <th>Azioni</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+
+                        @foreach (Pizza pizza in Model)
+                        {
+                            <tr>
+                                <td>@pizza.Id</td>
+                                <td ><img style="width:50px;"  src="@pizza.Photo"></td>
+                                <td class="title">@pizza.Name</td>
+                                <td class="description">@pizza.Description</td>
+                                <td class="price">@pizza.Price</td>
+                                @*<td class="category">@pizza.Category.Title</td>*@
+                                <td class="items-buttons">
+                                    <div class="buttons">
+                                        <a class="btn btn-info btn-sm" href="@Url.Action("Details", "Pizza", new { id = pizza.Id })">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
+                                        </a>
+                                        <a class="btn btn-warning btn-sm" href="@Url.Action("Update", "Pizza", new { id = pizza.Id })">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polygon points="14 2 18 6 7 17 3 17 3 13 14 2"></polygon><line x1="3" y1="22" x2="21" y2="22"></line></svg>
+                                        </a>
+                                        <form asp-controller="Pizza" asp-action="Delete" asp-route-id="@pizza.Id" method="post">
+                                            @Html.AntiForgeryToken()
+                                            <button type="submit" class="btn btn-danger btn-sm">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg>
+                                            </button>
+                                        </form>
+                                    </div>
+                                </td>
+                            </tr>
+                        }
+
+                    </tbody>
+                </table>
+            }
         </div>
-    </section>
-</body>
+    </div>
+</div>
