--- a/Views/Pizza/Update.cshtml
+++ b/Views/Pizza/Update.cshtml
@@ -1,33 +1,53 @@
 ﻿
-@model Pizza
-@{
-}
+@model PizzasCategories
 
-<div >
-    <form method="POST" asp-action="Update" asp-route-id="@Model.Id">
-        @Html.AntiForgeryToken()
-        <div class="col-md-6">
-            <label asp-for="Name" class="form-label">Name</label>
-            <input asp-for="Name" type="text" class="form-control">
-            <span asp-validation-for="Name"></span>
-        </div>
-        <div>
-            <label asp-for="Price" class="form-label">Price</label>
-            <input asp-for="Price" type="number" class="form-control" step=".01" value="0" min="0" max="100">
-            <span asp-validation-for="Price"></span>
-        </div>
-        <div>
-            <label asp-for="Photo" class="form-label">Photo</label>
-            <input asp-for="Photo" type="text" class="form-control">
-            <span asp-validation-for="Photo"></span>
-        </div>
-        <div>
-            <label asp-for="Description" class="form-label">Description</label>
-            <textarea asp-for="Description" class="form-control" rows="3"></textarea>
-            <span asp-validation-for="Description"></span>
-        </div>
+<div class="container">
+    <div class="row">
         <div class="col-12">
-            <button type="submit">Edit</button>
+            <div class="d-flex align-items-center">
+                <h1 class="mt-3 mb-3">Modifica pizza</h1>
+            </div>
+            <form asp-controller="Pizza" asp-action="Update" asp-route-id="@Model.Pizza.Id" method="post">
+                @Html.AntiForgeryToken()
+                <div class="mb-3">
+                    <strong>Immagine:</strong>
+                    <input asp-for="Pizza.Photo" class="d-block w-100" />
+                    <span asp-validation-for="Pizza.Photo" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <strong>Titolo:</strong>
+                    <input asp-for="Pizza.Name" class="d-block w-100" />
+                    <span asp-validation-for="Pizza.Name" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <strong>Contenuto:</strong>
+                    <textarea asp-for="Pizza.Description" rows="10" class="d-block w-100"></textarea>
+                    <span asp-validation-for="Pizza.Description" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <strong>Categoria:</strong>
+                    <select asp-for="Pizza.CategoryId" rows="10" class="d-block w-100">
+                        @foreach (Category category in Model.Categories)
+                        {
+                            @if (Model.Pizza.CategoryId == category.Id)
+                            {
+                                <option value="@category.Id" selected>@category.Title</option>
+                            }
+                            else
+                            {
+                                <option value="@category.Id">@category.Title</option>
+                            }
+                        }
+                    </select>
+                    <span asp-validation-for="Pizza.CategoryId" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <label asp-for="Pizza.Price" for="price">Prezzo</label>
+                    <input asp-for="Pizza.Price" type="number" id="price" step=".1">
+                    <span asp-validation-for="Pizza.Price"></span>
+                </div>
+                <button type="submit">Submit</button>
+            </form>
         </div>
-    </form>
+    </div>
 </div>
